appropriate changes have been made to FooterTest, SortTests, HomePage, ProductsPage